# dorado-run

./: .gitignore  README.md  pyproject.toml
cfg/: config_temp.yml
env/: env.yml
src/: dlDorado  lnPod5
src/dorado_run/: __init__.py  cfgInit.py  cli.py  dlDorado.py  dlModels.py  genCMD.py  lnPod5.py  toSbatch.py
tests/: test_cfgInit.py  test_dlModels.py  test_genCMD.py  test_lnPod5.py  test_toSbatch.py
